Fix whitespaces being eaten in autocomplete results in certain cases

--- a/Files/src/css/component/collection/card-search-autocomplete-item.component.scss
+++ b/Files/src/css/component/collection/card-search-autocomplete-item.component.scss
@@ -14,6 +14,10 @@ li {
     }
 }
 
+span {
+    white-space: pre-wrap;
+}
+
 .match {
 	@extend %search-bar-auto;
 }
